Analizador SSL Antlr4/generated/LenguajeParser.js
// Generated from d:\User\OneDrive\Desktop\proyecto-final\proyecto-final\Lenguaje.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import LenguajeListener from './LenguajeListener.js';
import LenguajeVisitor from './LenguajeVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class LenguajeParser extends antlr4.Parser {

    static grammarFileName = "Lenguaje.g4";
    static literalNames = [ null, "'variable'", null, null, null, "'longitud'", 
                            "'invertir'", "'reemplazar'", "'imprimir'", 
                            "'devolver'", "'='", "';'", "','", "'('", "')'", 
                            "'{'", "'}'", "'+'" ];
    static symbolicNames = [ null, "VARIABLE", "FUNCION", "MAYUSCULAS", 
                             "MINUSCULAS", "LONGITUD", "INVERTIR", "REEMPLAZAR", 
                             "IMPRIMIR", "DEVOLVER", "ASIGN", "PUNTO_COMA", 
                             "COMA", "LPAREN", "RPAREN", "LLAVE_IZQ", "LLAVE_DER", 
                             "MAS", "TEXTO", "NUMERO", "IDENTIFICADOR", 
                             "WS", "COMENTARIO" ];
    static ruleNames = [ "programa", "sentencia", "declaracion", "asignable", 
                         "funcion", "argumentos", "instrucciones", "instruccion", 
                         "asignacion", "impresion", "retorno", "ejecucion", 
                         "transformacion", "valor", "cadena", "texto", "numero", 
                         "nombre" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = LenguajeParser.ruleNames;
        this.literalNames = LenguajeParser.literalNames;
        this.symbolicNames = LenguajeParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, LenguajeParser.RULE_programa);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 39;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LenguajeParser.VARIABLE) | (1 << LenguajeParser.FUNCION) | (1 << LenguajeParser.IMPRIMIR) | (1 << LenguajeParser.IDENTIFICADOR))) !== 0)) {
	            this.state = 36;
	            this.sentencia();
	            this.state = 41;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 42;
	        this.match(LenguajeParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentencia() {
	    let localctx = new SentenciaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, LenguajeParser.RULE_sentencia);
	    try {
	        this.state = 48;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case LenguajeParser.VARIABLE:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 44;
	            this.declaracion();
	            break;
	        case LenguajeParser.FUNCION:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 45;
	            this.funcion();
	            break;
	        case LenguajeParser.IMPRIMIR:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 46;
	            this.impresion();
	            break;
	        case LenguajeParser.IDENTIFICADOR:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 47;
	            this.ejecucion();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaracion() {
	    let localctx = new DeclaracionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, LenguajeParser.RULE_declaracion);
	    try {
	        this.state = 60;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new DeclConAsignContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 50;
	            this.match(LenguajeParser.VARIABLE);
	            this.state = 51;
	            this.nombre();
	            this.state = 52;
	            this.match(LenguajeParser.ASIGN);
	            this.state = 53;
	            this.asignable();
	            this.state = 54;
	            this.match(LenguajeParser.PUNTO_COMA);
	            break;

	        case 2:
	            localctx = new DeclSinAsignContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 56;
	            this.match(LenguajeParser.VARIABLE);
	            this.state = 57;
	            this.nombre();
	            this.state = 58;
	            this.match(LenguajeParser.PUNTO_COMA);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	asignable() {
	    let localctx = new AsignableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, LenguajeParser.RULE_asignable);
	    try {
	        this.state = 72;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new AsignTransformContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 62;
	            this.transformacion();
	            this.state = 63;
	            this.match(LenguajeParser.LPAREN);
	            this.state = 64;
	            this.cadena();
	            this.state = 65;
	            this.match(LenguajeParser.RPAREN);
	            break;

	        case 2:
	            localctx = new AsignConcatContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 67;
	            this.cadena();
	            this.state = 68;
	            this.match(LenguajeParser.MAS);
	            this.state = 69;
	            this.cadena();
	            break;

	        case 3:
	            localctx = new AsignValorContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 71;
	            this.valor();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcion() {
	    let localctx = new FuncionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, LenguajeParser.RULE_funcion);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.match(LenguajeParser.FUNCION);
	        this.state = 75;
	        this.nombre();
	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===LenguajeParser.LPAREN) {
	            this.state = 76;
	            this.match(LenguajeParser.LPAREN);
	            this.state = 77;
	            this.argumentos();
	            this.state = 78;
	            this.match(LenguajeParser.RPAREN);
	        }

	        this.state = 82;
	        this.match(LenguajeParser.LLAVE_IZQ);
	        this.state = 83;
	        this.instrucciones();
	        this.state = 84;
	        this.match(LenguajeParser.LLAVE_DER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentos() {
	    let localctx = new ArgumentosContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, LenguajeParser.RULE_argumentos);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.nombre();
	        this.state = 91;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LenguajeParser.COMA) {
	            this.state = 87;
	            this.match(LenguajeParser.COMA);
	            this.state = 88;
	            this.nombre();
	            this.state = 93;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instrucciones() {
	    let localctx = new InstruccionesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, LenguajeParser.RULE_instrucciones);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LenguajeParser.VARIABLE) | (1 << LenguajeParser.IMPRIMIR) | (1 << LenguajeParser.DEVOLVER) | (1 << LenguajeParser.IDENTIFICADOR))) !== 0)) {
	            this.state = 94;
	            this.instruccion();
	            this.state = 99;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruccion() {
	    let localctx = new InstruccionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, LenguajeParser.RULE_instruccion);
	    try {
	        this.state = 104;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case LenguajeParser.VARIABLE:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 100;
	            this.declaracion();
	            break;
	        case LenguajeParser.IDENTIFICADOR:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 101;
	            this.asignacion();
	            break;
	        case LenguajeParser.IMPRIMIR:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 102;
	            this.impresion();
	            break;
	        case LenguajeParser.DEVOLVER:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 103;
	            this.retorno();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	asignacion() {
	    let localctx = new AsignacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, LenguajeParser.RULE_asignacion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.nombre();
	        this.state = 107;
	        this.match(LenguajeParser.ASIGN);
	        this.state = 108;
	        this.asignable();
	        this.state = 109;
	        this.match(LenguajeParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	impresion() {
	    let localctx = new ImpresionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, LenguajeParser.RULE_impresion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this.match(LenguajeParser.IMPRIMIR);
	        this.state = 112;
	        this.match(LenguajeParser.LPAREN);
	        this.state = 113;
	        this.valor();
	        this.state = 114;
	        this.match(LenguajeParser.RPAREN);
	        this.state = 115;
	        this.match(LenguajeParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	retorno() {
	    let localctx = new RetornoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, LenguajeParser.RULE_retorno);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.match(LenguajeParser.DEVOLVER);
	        this.state = 118;
	        this.valor();
	        this.state = 119;
	        this.match(LenguajeParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ejecucion() {
	    let localctx = new EjecucionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, LenguajeParser.RULE_ejecucion);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121;
	        this.nombre();
	        this.state = 122;
	        this.match(LenguajeParser.LPAREN);
	        this.state = 131;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LenguajeParser.TEXTO) | (1 << LenguajeParser.NUMERO) | (1 << LenguajeParser.IDENTIFICADOR))) !== 0)) {
	            this.state = 123;
	            this.valor();
	            this.state = 128;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===LenguajeParser.COMA) {
	                this.state = 124;
	                this.match(LenguajeParser.COMA);
	                this.state = 125;
	                this.valor();
	                this.state = 130;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 133;
	        this.match(LenguajeParser.RPAREN);
	        this.state = 134;
	        this.match(LenguajeParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transformacion() {
	    let localctx = new TransformacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, LenguajeParser.RULE_transformacion);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LenguajeParser.MAYUSCULAS) | (1 << LenguajeParser.MINUSCULAS) | (1 << LenguajeParser.LONGITUD) | (1 << LenguajeParser.INVERTIR) | (1 << LenguajeParser.REEMPLAZAR))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, LenguajeParser.RULE_valor);
	    try {
	        this.state = 141;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case LenguajeParser.TEXTO:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 138;
	            this.texto();
	            break;
	        case LenguajeParser.NUMERO:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 139;
	            this.numero();
	            break;
	        case LenguajeParser.IDENTIFICADOR:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 140;
	            this.nombre();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cadena() {
	    let localctx = new CadenaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, LenguajeParser.RULE_cadena);
	    try {
	        this.state = 145;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case LenguajeParser.TEXTO:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 143;
	            this.texto();
	            break;
	        case LenguajeParser.IDENTIFICADOR:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 144;
	            this.nombre();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	texto() {
	    let localctx = new TextoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, LenguajeParser.RULE_texto);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 147;
	        this.match(LenguajeParser.TEXTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	numero() {
	    let localctx = new NumeroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, LenguajeParser.RULE_numero);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(LenguajeParser.NUMERO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nombre() {
	    let localctx = new NombreContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, LenguajeParser.RULE_nombre);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this.match(LenguajeParser.IDENTIFICADOR);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

LenguajeParser.EOF = antlr4.Token.EOF;
LenguajeParser.VARIABLE = 1;
LenguajeParser.FUNCION = 2;
LenguajeParser.MAYUSCULAS = 3;
LenguajeParser.MINUSCULAS = 4;
LenguajeParser.LONGITUD = 5;
LenguajeParser.INVERTIR = 6;
LenguajeParser.REEMPLAZAR = 7;
LenguajeParser.IMPRIMIR = 8;
LenguajeParser.DEVOLVER = 9;
LenguajeParser.ASIGN = 10;
LenguajeParser.PUNTO_COMA = 11;
LenguajeParser.COMA = 12;
LenguajeParser.LPAREN = 13;
LenguajeParser.RPAREN = 14;
LenguajeParser.LLAVE_IZQ = 15;
LenguajeParser.LLAVE_DER = 16;
LenguajeParser.MAS = 17;
LenguajeParser.TEXTO = 18;
LenguajeParser.NUMERO = 19;
LenguajeParser.IDENTIFICADOR = 20;
LenguajeParser.WS = 21;
LenguajeParser.COMENTARIO = 22;

LenguajeParser.RULE_programa = 0;
LenguajeParser.RULE_sentencia = 1;
LenguajeParser.RULE_declaracion = 2;
LenguajeParser.RULE_asignable = 3;
LenguajeParser.RULE_funcion = 4;
LenguajeParser.RULE_argumentos = 5;
LenguajeParser.RULE_instrucciones = 6;
LenguajeParser.RULE_instruccion = 7;
LenguajeParser.RULE_asignacion = 8;
LenguajeParser.RULE_impresion = 9;
LenguajeParser.RULE_retorno = 10;
LenguajeParser.RULE_ejecucion = 11;
LenguajeParser.RULE_transformacion = 12;
LenguajeParser.RULE_valor = 13;
LenguajeParser.RULE_cadena = 14;
LenguajeParser.RULE_texto = 15;
LenguajeParser.RULE_numero = 16;
LenguajeParser.RULE_nombre = 17;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LenguajeParser.RULE_programa;
    }

	EOF() {
	    return this.getToken(LenguajeParser.EOF, 0);
	};

	sentencia = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(SentenciaContext);
	    } else {
	        return this.getTypedRuleContext(SentenciaContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.exitPrograma(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LenguajeVisitor ) {
	        return visitor.visitPrograma(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SentenciaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LenguajeParser.RULE_sentencia;
    }

	declaracion() {
	    return this.getTypedRuleContext(DeclaracionContext,0);
	};

	funcion() {
	    return this.getTypedRuleContext(FuncionContext,0);
	};

	impresion() {
	    return this.getTypedRuleContext(ImpresionContext,0);
	};

	ejecucion() {
	    return this.getTypedRuleContext(EjecucionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.enterSentencia(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.exitSentencia(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LenguajeVisitor ) {
	        return visitor.visitSentencia(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DeclaracionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LenguajeParser.RULE_declaracion;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class DeclConAsignContext extends DeclaracionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	VARIABLE() {
	    return this.getToken(LenguajeParser.VARIABLE, 0);
	};

	nombre() {
	    return this.getTypedRuleContext(NombreContext,0);
	};

	ASIGN() {
	    return this.getToken(LenguajeParser.ASIGN, 0);
	};

	asignable() {
	    return this.getTypedRuleContext(AsignableContext,0);
	};

	PUNTO_COMA() {
	    return this.getToken(LenguajeParser.PUNTO_COMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.enterDeclConAsign(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.exitDeclConAsign(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LenguajeVisitor ) {
	        return visitor.visitDeclConAsign(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

LenguajeParser.DeclConAsignContext = DeclConAsignContext;

class DeclSinAsignContext extends DeclaracionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	VARIABLE() {
	    return this.getToken(LenguajeParser.VARIABLE, 0);
	};

	nombre() {
	    return this.getTypedRuleContext(NombreContext,0);
	};

	PUNTO_COMA() {
	    return this.getToken(LenguajeParser.PUNTO_COMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.enterDeclSinAsign(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.exitDeclSinAsign(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LenguajeVisitor ) {
	        return visitor.visitDeclSinAsign(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

LenguajeParser.DeclSinAsignContext = DeclSinAsignContext;

class AsignableContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LenguajeParser.RULE_asignable;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class AsignConcatContext extends AsignableContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	cadena = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CadenaContext);
	    } else {
	        return this.getTypedRuleContext(CadenaContext,i);
	    }
	};

	MAS() {
	    return this.getToken(LenguajeParser.MAS, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.enterAsignConcat(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.exitAsignConcat(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LenguajeVisitor ) {
	        return visitor.visitAsignConcat(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

LenguajeParser.AsignConcatContext = AsignConcatContext;

class AsignTransformContext extends AsignableContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	transformacion() {
	    return this.getTypedRuleContext(TransformacionContext,0);
	};

	LPAREN() {
	    return this.getToken(LenguajeParser.LPAREN, 0);
	};

	cadena() {
	    return this.getTypedRuleContext(CadenaContext,0);
	};

	RPAREN() {
	    return this.getToken(LenguajeParser.RPAREN, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.enterAsignTransform(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.exitAsignTransform(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LenguajeVisitor ) {
	        return visitor.visitAsignTransform(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

LenguajeParser.AsignTransformContext = AsignTransformContext;

class AsignValorContext extends AsignableContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.enterAsignValor(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LenguajeListener ) {
	        listener.exitAsignValor(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LenguajeVisitor ) {
	        return visitor.visitAsignValor(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

LenguajeParser.AsignValorContext = AsignValorContext;

class FuncionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LenguajeParser.RULE_funcion;
    }

	FUNCION() {
	    return this.getToken(LenguajeParser.FUNCION, 0);
	};
